--- a/_config.yml
+++ b/_config.yml
@@ -93,7 +93,7 @@ feed_show_excerpt: true
 feed_show_tags: true
 
 # The keywords to associate with your website, for SEO purposes
-#keywords: "my,list,of,keywords"
+keywords: "book,books"
 
 search: true
 
