--- a/_config.yml
+++ b/_config.yml
@@ -219,14 +219,14 @@ defaults:
       layout: "post"
       comments: true  # add comments to all blog posts
       social-share: true # add social media sharing buttons to all blog posts
-      lang: fa
+      language: fa
       direction: rtl
   -
     scope:
       path: "" # any file that's not a post will be a "page" layout by default
     values:
       layout: "page"
-      lang: fa
+      language: fa
       direction: rtl
 
 # Exclude these files from production site
