--- a/_config.yml
+++ b/_config.yml
@@ -158,7 +158,7 @@ mobile-theme-col: "#0085A1"
 # --- Comments --- #
 
 # To use Disqus comments, sign up to https://disqus.com and fill in your Disqus shortname (NOT the userid)
-disqus: "mhkarami97"
+# disqus: "mhkarami97"
 
 # To use Facebook Comments, create a Facebook app and fill in the Facebook App ID
 #fb_comment_id: ""
