--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ author: Mohammad Hossein Karami
 
 navbar-links:
   "درباره" : "درباره"
-  "صفحه شخصی" : "https://mhkarami97.ir"
+  "دیگر سایت‌ها" : "https://mhkarami97.ir/#blog"
 
 # --- Logo --- #
 
