--- a/_config.yml
+++ b/_config.yml
@@ -20,6 +20,7 @@ author: Mohammad Hossein Karami
 
 navbar-links:
   "درباره" : "درباره"
+  "انجمن گفتگو" : "https://forum.itarfand.com"
   "دیگر سایت‌ها" : "https://mhkarami97.ir/#blog"
 
 # --- Logo --- #
