--- a/_config.yml
+++ b/_config.yml
@@ -89,7 +89,7 @@ excerpt_length: 50
 feed_show_excerpt: true
 
 # Whether or not to show a list of tags below each post preview in the feed page
-feed_show_tags: true
+feed_show_tags: false
 
 # The keywords to associate with your website, for SEO purposes
 keywords: "book,books"
@@ -221,7 +221,7 @@ timezone: "IR"
 markdown: kramdown
 highlighter: rouge
 permalink: /:year-:month-:day-:title/
-paginate: 10
+paginate: 25
 
 kramdown:
   input: GFM
