--- a/_config.yml
+++ b/_config.yml
@@ -89,7 +89,7 @@ excerpt_length: 50
 feed_show_excerpt: true
 
 # Whether or not to show a list of tags below each post preview in the feed page
-feed_show_tags: false
+feed_show_tags: true
 
 # The keywords to associate with your website, for SEO purposes
 keywords: "book,books"
