--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 # --- Required options --- #
 
 # Name of website
-title: کتابخانه
+title: کتاب‌خانه
 email: mhkarami97@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   کتاب هایی که خوانده ام
