add GitHub-like code styling for code blocks and inline code

--- a/_config.yml
+++ b/_config.yml
@@ -131,8 +131,8 @@ google_site_verification: "BVwx9je8Sv6HbUTtZ4yJrPvJLZzE0wEsPS2VJHQzOKo"
 mobile-theme-col: "#0085A1"
 
 # For any extra visual customization, you can include additional CSS files in every page on your site. List any custom CSS files here
-#site-css:
-#  - "/assets/css/custom-styles.css"
+site-css:
+  - "/assets/css/github-code.css"
 
 # If you have common JavaScript files that should be included in every page, list them here
 #site-js:
