--- a/_config.yml
+++ b/_config.yml
@@ -133,10 +133,11 @@ mobile-theme-col: "#0085A1"
 # For any extra visual customization, you can include additional CSS files in every page on your site. List any custom CSS files here
 site-css:
   - "/assets/css/github-code.css"
+  - "/assets/css/lightbox.css"
 
 # If you have common JavaScript files that should be included in every page, list them here
-#site-js:
-#  - "/assets/js/custom-script.js"
+site-js:
+  - "/assets/js/lightbox.js"
 
 # --- Web Analytics Section --- #
 
